// micromodels/src/proto/preprocessor.proto (V2 - 支持NER)
syntax = "proto3";

package micromodels;

// --- V1: 用于TF-IDF分类器的预处理器数据 ---
message TfidfFeatureData {
  repeated string vocabulary = 1;
  repeated float idf_weights = 2;
}

// 这是旧的顶层消息，为了向后兼容，我们保留它
message PreprocessorData {
  TfidfFeatureData word_features = 1;
  TfidfFeatureData char_features = 2;
}

// --- V2: 用于NER序列标注模型的预处理器数据 ---
message NerPreprocessorData {
  // 使用 map 类型，key是词，value是索引。
  map<string, int32> word_to_ix = 1;
  map<string, int32> tag_to_ix = 2;
}